<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.privacy.PrivacyFragment">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_privacy"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:text="@string/tanggal_efektif"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendahuluan_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content_pendahuluan_privacy"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dikumpukan_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content_info_dikumpulkan_privacy"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penggunaan_info_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content_penggunaan_info_privacy"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perlindungan_data_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content_perlindungan_data_privacy"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pembagian_info_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                android:text="@string/content_pembagian_info_privacy"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_privacy"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/content_contact_us_privacy"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/tajwidify_privacy"
                android:textSize="14sp"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>