<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_auth">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_bulet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSalam"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:src="@drawable/vector_salam"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/masuk"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@+id/ivSalam"
        app:layout_constraintStart_toStartOf="@+id/ivSalam"
        app:layout_constraintTop_toBottomOf="@+id/ivSalam" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:endIconMode="password_toggle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/inputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="Lupa password?"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword" />

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/masuk"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_width="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <Button
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/ic_google"
        android:text="Masuk dengan Google"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <LinearLayout
        android:id="@+id/linearBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_google"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/btn_google">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Belum punya akun?"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:id="@+id/dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="8dp"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>