<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/green"/>

                <ImageView
                    android:id="@+id/btnClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_close"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rate_us"/>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="-50dp"
                android:background="@drawable/round_bg_emoji_stroke"
                android:padding="10dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_bg_emoji_white"/>

                <ImageView
                    android:id="@+id/ivEmoRating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:padding="18dp"
                    android:src="@drawable/rate_four"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/rate_us_desc"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:theme="@style/MyRatingBar"
                android:rating="3.5"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lines="6"
                    android:hint="@string/kritik_saran" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="Kirim"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" />
            </FrameLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>